--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,8 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
-	runtimeOnly 'com.h2database:h2:1.4.197'
+	runtimeOnly 'com.h2database:h2:1.4.191'
+	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
 test {
