--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,13 +5,14 @@ spring:
 
   datasource:
     driver-class-name: org.h2.Driver  #h2 드라이버 설정
-    url: jdbc:h2:file:~/test_db;AUTO_SERVER=TRUE  #접속 URL
-    username: test  # 사용자 이름 (로그인 시 사용)
-    password: 1234  # 사용자 암호 (로그인 시 사용)
+    # url: jdbc:h2:file:~/test_db;AUTO_SERVER=TRUE  #접속 URL
+#    username: test  # 사용자 이름 (로그인 시 사용)
+#    password: 1234  # 사용자 암호 (로그인 시 사용)
 
   jpa:
     database-platform: H2
     show-sql: true
     hibernate:
       ddl-auto: create-drop
-      format_sql: true
+    properties:
+      hibernate.format_sql: true
