--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	runtimeOnly 'com.h2database:h2:1.4.191'
 	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	compile group: 'org.slf4j', name: 'slf4j-api'
 }
 
 test {
